# todo-manager-sample

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  todo-manager-sample.pro
app/: CMakeLists.txt
app/res/: schema.sql
app/src/: main.cpp
app/src/dal/: personmapping.cpp  personmapping.h  personrepository.cpp  personrepository.h  sqlitedatetimeconverter.h  todomapping.cpp  todomapping.h  todorepository.cpp  todoworkerrepository.cpp  todoworkerrepository.h  todoworkers.cpp  todoworkersquery.cpp  todoworkersquery.h
app/src/data/: person.cpp  person.h  todo.cpp  todo.h
app/src/itemmodels/: personlistmodel.h
app/src/moderngrids/: iobservablevariantlist.h  modelbuilder.cpp  modelbuilder.h  modellogger.cpp  modellogger.h  observablelist.h  observableset.h  observablevariantlistmodel.cpp  observablevariantlistmodel.h  observablevariantlistproxy.h  proxymodelutils.cpp  proxymodelutils.h  qeventhandler.h  qmgeventhandler.h  qmgmodellogger.cpp  qmgmodellogger.h  qmgobservablelist.h  qmgobservablevariantlistmodel.cpp  qmgobservablevariantlistmodel.h  qmgobservablevariantlistproxy.h  qmgproxymodelutils.cpp  qmgproxymodelutils.h  qobservablelist.h  qobservablevariantlistproxy.h  viewbuilder.h
app/src/moderngrids/builders/: qmgcolumncollectionbuilder.cpp  qmgcolumncollectionbuilder.h  qmgcolumnmodelbuilder.cpp  qmgcolumnmodelbuilder.h  qmgcommonmodelbuilder.cpp  qmgcommonmodelbuilder.h  qmgdatamodelbuilder.cpp  qmgdatamodelbuilder.h  qmgheaderdatamodelbuilder.cpp  qmgheaderdatamodelbuilder.h  qmgmodelbuilder.cpp  qmgmodelbuilder.h  qmgsourcemodelbuilder.cpp  qmgsourcemodelbuilder.h
app/src/moderngrids/decorators/: alternaterowshadingmodeldecorator.cpp  alternaterowshadingmodeldecorator.h  checkboxmultimarkmodeldecorator.cpp  checkboxmultimarkmodeldecorator.h  columnmodeldecorator.cpp  columnmodeldecorator.h  datamodeldecorator.cpp  datamodeldecorator.h  fetchmoredecorator.cpp  fetchmoredecorator.h  headerdatamodeldecorator.cpp  headerdatamodeldecorator.h  objectdatamodeldecorator.cpp  objectdatamodeldecorator.h  qmgalternaterowshadingmodeldecorator.cpp  qmgalternaterowshadingmodeldecorator.h  qmgcheckboxmultimarkmodeldecorator.cpp  qmgcheckboxmultimarkmodeldecorator.h  qmgcolumnmodeldecorator.cpp  qmgcolumnmodeldecorator.h  qmgdatamodeldecorator.cpp  qmgdatamodeldecorator.h  qmgfetchmoredecorator.cpp  qmgfetchmoredecorator.h  qmgheaderdatamodeldecorator.cpp  qmgheaderdatamodeldecorator.h  qmgobjectdatamodeldecorator.cpp  qmgobjectdatamodeldecorator.h
app/src/moderngrids/managers/: checkboxmultimarkviewmanager.cpp  checkboxmultimarkviewmanager.h  selectionmanager.h
app/src/mvvm/: checkboxbinding.cpp  checkboxbinding.h  comboboxbinding.cpp  comboboxbinding.h  datetimeeditbinding.cpp  datetimeeditbinding.h  lineeditbinding.cpp  lineeditbinding.h  plaintexteditbinding.cpp  plaintexteditbinding.h
app/src/viewmodels/: personsviewmodel.cpp  personsviewmodel.h  personviewmodel.cpp  personviewmodel.h  todosviewmodel.cpp  todosviewmodel.h  todoviewmodel.cpp  todoviewmodel.h
app/src/views/: mainwindow.cpp  mainwindow.h  mainwindow.ui  personsview.cpp  personsview.h  personsview.ui  personview.cpp  personview.h  personview.ui  todosview.cpp  todosview.h  todosview.ui  todoview.cpp  todoview.h  todoview.ui
src/: main.cpp
src/dal/: sqlitebooleanconverter.cpp  sqlitebooleanconverter.h  sqlitedatetimeconverter.cpp  todorepository.cpp  todorepository.h  todoworkers.h
src/data/: person.h  todo.cpp  todo.h
src/itemmodels/: personlistmodel.cpp
src/viewmodels/: personviewmodel.cpp  personviewmodel.h  todoviewmodel.h
src/views/: personview.cpp  personview.h  todosview.cpp  todoview.ui
test/: CMakeLists.txt
test/QEventHandlerTest/: CMakeLists.txt  QEventHandlerTest.cpp
test/QObservableListTest/: CMakeLists.txt  QObservableListTest.cpp
test/QObservableVariantListProxyTest/: CMakeLists.txt  QObservableVariantListProxyTest.cpp
test/QmgEventHandlerTest/: CMakeLists.txt  QmgEventHandlerTest.cpp
test/QmgObservableListTest/: CMakeLists.txt  QmgObservableListTest.cpp
test/QmgObservableVariantListProxyTest/: CMakeLists.txt  QmgObservableVariantListProxyTest.cpp
test/cmake/: base.cmake  qtest.cmake
