add_subdirectory(QObservableListTest)
add_subdirectory(QEventHandlerTest)
add_subdirectory(QObservableVariantListProxyTest)

set_property(TARGET QObservableListTest PROPERTY FOLDER "tests")
set_property(TARGET QEventHandlerTest PROPERTY FOLDER "tests")
set_property(TARGET QObservableVariantListProxyTest PROPERTY FOLDER "tests")