add_subdirectory(QmgObservableListTest)
add_subdirectory(QmgEventHandlerTest)
add_subdirectory(QmgObservableVariantListProxyTest)

set_property(TARGET QmgObservableListTest PROPERTY FOLDER "tests")
set_property(TARGET QmgEventHandlerTest PROPERTY FOLDER "tests")
set_property(TARGET QmgObservableVariantListProxyTest PROPERTY FOLDER "tests")